# gst-simplefilter

./: README  README.md  meson.build
plugins/: gstsimplefilter.c  gstsimplefilter.cpp  gstsimplefilter.h  gstsimplefilterplugin.c  meson.build
tools/: gstsimplefilter.cpp  meson.build
